--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "webpack-stream": "^7.0.0"
     },
     "dependencies": {
+        "chart.js": "^3.6.1",
         "core-js": "^3.19.1",
         "normalize.css": "^8.0.1"
     }
